--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ python = "^3.8"
 torch = "^1.8.1"
 torchvision = "^0.9.1"
 torchaudio = "^0.8.1"
-dvc = {git = "https://github.com/iterative/dvc"}
+dvc = {git = "https://github.com/iterative/dvc", extras = ["gdrive"]}
 fairseq = {git = "https://github.com/pytorch/fairseq"}
 pytorch-lightning = "^1.3.1"
 torchmetrics = "^0.3.2"
@@ -23,6 +23,9 @@ ipython = {version = "^7.23.1", extras = ["production"]}
 matplotlib = {version = "^3.4.2", extras = ["production"]}
 PyAudio = {version = "^0.2.11", extras = ["production"]}
 Wave = {version = "^0.0.2", extras = ["production"]}
+mlflow = "^1.17.0"
+ray = {extras = ["tune"], version = "^1.3.0"}
+boto3 = "^1.17.75"
 
 [tool.poetry.dev-dependencies]
 
