--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,10 @@ Wave = {version = "^0.0.2", extras = ["production"]}
 mlflow = "^1.17.0"
 ray = {extras = ["tune"], version = "^1.3.0"}
 boto3 = "^1.17.75"
+torchserve = {version = "^0.3.1", extras = ["production"]}
+torch-model-archiver = {version = "^0.3.1", extras = ["production"]}
+ax-platform = "^0.1.20"
+SQLAlchemy = "^1.4.15"
 
 [tool.poetry.dev-dependencies]
 
