--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -52,8 +52,29 @@ jobs:
           command: |
             mkdir -p ./.dvc/tmp
             echo '{"access_token": "ya29.a0AfH6SMD2YWhzMqZvYFGkuGBSg4iA1A9TYcVh2F_v5p1SnpQBQoazcME10cImXgXXTgB57EoZCabyPIROJkQ9i_xO6Ud-86dbY9hYQX_LzVONGc0imEQvZf1VwMzzeUX0rBueso4En8I-DHuB73ScpGrPni8e", "client_id": "710796635688-iivsgbgsb6uv1fap6635dhvuei09o66c.apps.googleusercontent.com", "client_secret": "a1Fz59uTpVNeG_VGuSKDLJXv", "refresh_token": "1//0cWHbfqFHYjkuCgYIARAAGAwSNwF-L9IraYNKpsq5D8YJIdHUG_1HNrJap9VOQ0PNgFNCuClpMUGK8OtEMQukk4S6ljMheM7vpaw", "token_expiry": "2021-05-14T20:40:26Z", "token_uri": "https://oauth2.googleapis.com/token", "user_agent": null, "revoke_uri": "https://oauth2.googleapis.com/revoke", "id_token": null, "id_token_jwt": null, "token_response": {"access_token": "ya29.a0AfH6SMD2YWhzMqZvYFGkuGBSg4iA1A9TYcVh2F_v5p1SnpQBQoazcME10cImXgXXTgB57EoZCabyPIROJkQ9i_xO6Ud-86dbY9hYQX_LzVONGc0imEQvZf1VwMzzeUX0rBueso4En8I-DHuB73ScpGrPni8e", "expires_in": 3599, "refresh_token": "1//0cWHbfqFHYjkuCgYIARAAGAwSNwF-L9IraYNKpsq5D8YJIdHUG_1HNrJap9VOQ0PNgFNCuClpMUGK8OtEMQukk4S6ljMheM7vpaw", "scope": "https://www.googleapis.com/auth/drive https://www.googleapis.com/auth/drive.appdata", "token_type": "Bearer"}, "scopes": ["https://www.googleapis.com/auth/drive", "https://www.googleapis.com/auth/drive.appdata"], "token_info_uri": "https://oauth2.googleapis.com/tokeninfo", "invalid": false, "_class": "OAuth2Credentials", "_module": "oauth2client.client"}' > ./.dvc/tmp/gdrive-user-credentials.json
+      - restore_cache:
+          keys:
+          - deps-{{ checksum "./models/wav2vec_kws/best.ckpt.dvc" }}
       - run:
           name: Run DVC
           # This assumes pytest is installed via the install-package step above
           command: |
             poetry run dvc pull ./models/wav2vec_kws/best.ckpt.dvc
+            poetry run dvc pull ./resources/models/pretrained/wav2vec_small.pt.dvc
+      - save_cache:
+          key: deps-{{ checksum "./models/wav2vec_kws/best.ckpt.dvc" }}
+          paths:
+            - "./models"
+      - restore_cache:
+          keys:
+            - deps-{{ checksum "./kws.mar" }}
+      - run: 
+          name: Build MAR Archive
+          command: torch-model-archiver --model-name kws --version 0.1 --serialized-file ./resources/models/pretrained/wav2vec_small.pt --model-file ./models/wav2vec_kws/best.ckpt --handler ./app/deployment/handler.py --extra-files="wav2keyword.py" --force
+      - save_cache:
+          key: deps-{{ checksum "./kws.mar" }}
+          paths:
+            - "./kws.mar"
+      - store_artifacts:
+          path: ./kws.mar
+          destination: model-package
