--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -65,16 +65,16 @@ jobs:
           key: deps-{{ checksum "./models/wav2vec_kws/best.ckpt.dvc" }}
           paths:
             - "./models"
-      - restore_cache:
-          keys:
-            - deps-{{ checksum "./kws.mar" }}
+      # - restore_cache:
+      #     keys:
+      #       - deps-{{ checksum "./kws.mar" }}
       - run: 
           name: Build MAR Archive
           command: torch-model-archiver --model-name kws --version 0.1 --serialized-file ./resources/models/pretrained/wav2vec_small.pt --model-file ./models/wav2vec_kws/best.ckpt --handler ./app/deployment/handler.py --extra-files="wav2keyword.py" --force
-      - save_cache:
-          key: deps-{{ checksum "./kws.mar" }}
-          paths:
-            - "./kws.mar"
+      # - save_cache:
+      #     key: deps-{{ checksum "./kws.mar" }}
+      #     paths:
+      #       - "./kws.mar"
       - store_artifacts:
           path: ./kws.mar
           destination: model-package
