--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,6 +24,8 @@ jobs:
     # Change the version below to your required version of python
     docker:
       - image: cimg/python:3.8
+    environment:
+      IMAGE_NAME kws-serving
     # Checkout the code as the first step. This is a dedicated CircleCI step.
     # The python orb's install-packages step will install the dependencies from a Pipfile via Pipenv by default.
     # Here we're making sure we use just use the system-wide pip. By default it uses the project root's requirements.txt.
@@ -70,7 +72,9 @@ jobs:
       #       - deps-{{ checksum "./kws.mar" }}
       - run: 
           name: Build MAR Archive
-          command: poetry run torch-model-archiver --model-name kws --version 0.1 --serialized-file ./resources/models/pretrained/wav2vec_small.pt --model-file ./models/wav2vec_kws/best.ckpt --handler ./app/deployment/handler.py
+          command: |
+            mkdir -p ./app/deployment/serving/model_store
+            poetry run torch-model-archiver --model-name kws --version 0.1 --serialized-file ./resources/models/pretrained/wav2vec_small.pt --model-file ./models/wav2vec_kws/best.ckpt --handler ./app/deployment/serving/handlers/handler.py --extra-files="./src/models/wav2keyword.py" --export-path ./app/deployment/serving/model_store --force
       # - save_cache:
       #     key: deps-{{ checksum "./kws.mar" }}
       #     paths:
@@ -78,3 +82,13 @@ jobs:
       - store_artifacts:
           path: ./kws.mar
           destination: model-package
+      - run:
+          name: Build Docker image
+          command: |
+            cd ./app/deployment/serving
+            docker build -t $IMAGE_NAME:latest .
+      - run:
+          name: Publish Docker Image to Docker Hub
+          command: |
+            echo "$DOCKER_TOKEN" | docker login -u "$DOCKER_USER" --password-stdin
+            docker push $IMAGE_NAME:latest
