--- a/app/deployment/serving/requirements.txt
+++ b/app/deployment/serving/requirements.txt
@@ -1,1 +1,221 @@
-httpx
+absl-py==0.12.0
+aiohttp==3.7.4.post0
+aiohttp-cors==0.7.0
+aioredis==1.3.1
+alembic==1.4.1
+altair==4.1.0
+antlr4-python3-runtime==4.8
+appdirs==1.4.4
+argon2-cffi==20.1.0
+astor==0.8.1
+async-generator==1.10
+async-timeout==3.0.1
+atpublic==2.3
+attrs==21.2.0
+audioread==2.1.9
+backcall==0.2.0
+base58==2.1.0
+bleach==3.3.0
+blessings==1.7
+blinker==1.4
+bokeh==2.3.2
+boto3==1.17.78
+botocore==1.20.78
+cached-property==1.5.2
+cachetools==4.2.2
+certifi==2020.12.5
+cffi==1.14.5
+chardet==4.0.0
+click==7.1.2
+cloudpickle==1.6.0
+colorama==0.4.4
+commonmark==0.9.1
+configobj==5.0.6
+cryptography==3.4.7
+cycler==0.10.0
+Cython==0.29.23
+databricks-cli==0.14.3
+decorator==5.0.9
+defusedxml==0.7.1
+dictdiffer==0.8.1
+diskcache==5.2.1
+distro==1.5.0
+docker==5.0.0
+dpath==2.0.1
+dulwich==0.20.23
+entrypoints==0.3
+enum-compat==0.0.3
+filelock==3.0.12
+Flask==2.0.1
+flatten-dict==0.4.0
+flufl.lock==3.2
+fsspec==2021.5.0
+ftfy==6.0.1
+funcy==1.16
+future==0.18.2
+gitdb==4.0.7
+GitPython==3.1.17
+google-api-core==1.28.0
+google-api-python-client==2.5.0
+google-auth==1.30.0
+google-auth-httplib2==0.1.0
+google-auth-oauthlib==0.4.4
+googleapis-common-protos==1.53.0
+gpustat==0.6.0
+gpytorch==1.4.2
+grandalf==0.6
+greenlet==1.1.0
+grpcio==1.38.0
+gunicorn==20.1.0
+h11==0.12.0
+hiredis==2.0.0
+httpcore==0.13.3
+httplib2==0.19.1
+httpx==0.18.1
+hydra-core==1.0.6
+idna==2.10
+importlib-resources==5.1.4
+itsdangerous==2.0.1
+jedi==0.18.0
+Jinja2==3.0.1
+jmespath==0.10.0
+joblib==1.0.1
+jsonpath-ng==1.5.2
+jsonschema==3.2.0
+jupyter-client==6.2.0
+jupyter-core==4.7.1
+jupyterlab-pygments==0.1.2
+jupyterlab-widgets==1.0.0
+kiwisolver==1.3.1
+librosa==0.8.0
+llvmlite==0.34.0
+mailchecker==4.0.7
+Mako==1.1.4
+Markdown==3.3.4
+MarkupSafe==2.0.1
+mistune==0.8.4
+msgpack==1.0.2
+multidict==5.1.0
+nanotime==0.5.2
+nest-asyncio==1.5.1
+networkx==2.5
+notebook==6.4.0
+numba==0.51.2
+numpy
+nvidia-ml-py3==7.352.0
+oauth2client==4.1.3
+oauthlib==3.1.0
+omegaconf==2.0.6
+opencensus==0.7.13
+opencensus-context==0.1.2
+packaging==20.9
+pandas
+pandocfilters
+parso==0.8.2
+pathspec==0.8.1
+pexpect==4.8.0
+phonenumbers==8.12.23
+pickleshare==0.7.5
+Pillow==8.2.0
+pip==21.1.1
+plotly==4.14.3
+ply==3.11
+pooch==1.3.0
+portalocker==2.0.0
+prometheus-client==0.10.1
+prometheus-flask-exporter==0.18.2
+prompt-toolkit==3.0.18
+protobuf==3.17.0
+psutil==5.8.0
+ptyprocess==0.7.0
+py-spy==0.3.7
+pyarrow==4.0.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycparser==2.20
+pydeck==0.6.2
+pyDeprecate==0.3.0
+pydot==1.4.2
+PyDrive2==1.8.2
+pygit2==1.5.0
+Pygments==2.9.0
+pygtrie==2.3.2
+pyOpenSSL==20.0.1
+pyparsing==2.4.7
+pyrsistent==0.17.3
+python-benedict==0.24.0
+python-dateutil==2.8.1
+python-editor==1.0.4
+python-fsutil==0.5.0
+python-slugify==5.0.2
+pytorch-lightning==1.3.2
+pytz==2021.1
+PyYAML==5.4.1
+pyzmq==22.0.3
+querystring-parser==1.2.4
+ray==1.3.0
+redis==3.5.3
+regex==2021.4.4
+requests==2.25.1
+requests-oauthlib==1.3.0
+resampy==0.2.2
+retrying==1.3.3
+rfc3986==1.5.0
+rich==10.2.2
+rsa==4.7.2
+ruamel.yaml==0.17.4
+ruamel.yaml.clib==0.2.2
+s3transfer==0.4.2
+sacrebleu==1.5.1
+scikit-learn==0.24.2
+scipy
+Send2Trash==1.5.0
+setuptools==47.1.0
+shortuuid==1.0.1
+shtab==1.3.6
+six==1.16.0
+smmap==4.0.0
+sniffio==1.2.0
+SoundFile==0.10.3.post1
+SQLAlchemy==1.4.15
+sqlparse==0.4.1
+streamlit==0.82.0
+streamlit-bokeh-events==0.1.2
+tabulate==0.8.9
+tensorboard==2.4.1
+tensorboard-plugin-wit==1.8.0
+tensorboardX==2.2
+terminado==0.10.0
+testpath==0.5.0
+text-unidecode==1.3
+threadpoolctl==2.1.0
+toml==0.10.2
+toolz==0.11.1
+torch==1.8.1
+torch-model-archiver==0.3.1
+torchaudio==0.8.1
+torchmetrics==0.3.2
+torchserve==0.4.0
+torchvision==0.9.1
+tornado==6.1
+tqdm
+traitlets
+typeguard==2.12.0
+typing-extensions==3.10.0.0
+tzlocal==2.1
+uritemplate==3.0.1
+urllib3==1.26.4
+validators==0.18.2
+voluptuous==0.12.1
+watchdog==2.1.2
+Wave==0.0.2
+wcwidth==0.2.5
+webencodings==0.5.1
+websocket-client==1.0.1
+Werkzeug==2.0.1
+wheel==0.36.2
+widgetsnbextension==3.5.1
+xmltodict==0.12.0
+yarl==1.6.3
+zc.lockfile==2.0
+zipp==3.4.1
