--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,6 +6,7 @@ orbs:
   # so you dont have to copy and paste it everywhere.
   # See the orb documentation here: https://circleci.com/developer/orbs/orb/circleci/python
   python: circleci/python@1.2
+  docker: circleci/docker@1.6.0
 
 workflows:
   sample:  # This is the name of the workflow, feel free to change it to better match your workflow.
@@ -13,28 +14,8 @@ workflows:
     # For more details on extending your workflow, see the configuration docs: https://circleci.com/docs/2.0/configuration-reference/#workflows 
     jobs:
       - build-and-test
-      - dockerize:
-          requires:
-            - build-and-test
 
 jobs:
-  dockerize:
-    docker:
-      - image: docker:18.06.0-ce-git
-    environment:
-      IMAGE_NAME: szybkiadas/fsdl_serving
-    steps:
-      - run:
-          name: Build Docker image
-          command: |
-            cd ./app/deployment/serving
-            docker build -t $IMAGE_NAME:latest .
-      - run:
-          name: Publish Docker Image to Docker Hub
-          command: |
-            echo "$DOCKER_TOKEN" | docker login -u "$DOCKER_USER" --password-stdin
-            docker push $IMAGE_NAME:latest
-
   build-and-test:  # This is the name of the job, feel free to change it to better match what you're trying to do!
     # These next lines defines a Docker executors: https://circleci.com/docs/2.0/executor-types/
     # You can specify an image from Dockerhub or use one of the convenience images from CircleCI's Developer Hub
@@ -43,6 +24,8 @@ jobs:
     # Change the version below to your required version of python
     docker:
       - image: cimg/python:3.8
+    environment:
+      IMAGE_NAME: szybkiadas/fsdl_serving
     # Checkout the code as the first step. This is a dedicated CircleCI step.
     # The python orb's install-packages step will install the dependencies from a Pipfile via Pipenv by default.
     # Here we're making sure we use just use the system-wide pip. By default it uses the project root's requirements.txt.
@@ -99,3 +82,13 @@ jobs:
       - store_artifacts:
           path: ./kws.mar
           destination: model-package
+      - run:
+          name: Build Docker image
+          command: |
+            cd ./app/deployment/serving
+            docker build -t $IMAGE_NAME:latest .
+      - run:
+          name: Publish Docker Image to Docker Hub
+          command: |
+            echo "$DOCKER_TOKEN" | docker login -u "$DOCKER_USER" --password-stdin
+            docker push $IMAGE_NAME:latest
